Fixed issue where base map attribution text is too large on mobile.

--- a/src/plugins/geomap/_base.scss
+++ b/src/plugins/geomap/_base.scss
@@ -142,6 +142,7 @@
 
 .olControlAttribution {
 	bottom: 5px;
+	font-size: x-small;
 	right: 5px;
 }
 
